<resources>
    <string name="app_name">Note Application</string>
    <string name="login_screen">Login</string>
    <string name="signup_screen">Sign Up</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="all_notes">All Notes</string>
    <string name="add_note">Add Note</string>
    <string name="EncryptShrdPref">EncryptSharedPreference</string>
    <string name="note">Here Your Note ! </string>
┘

</resources>