<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpScreen">

    <TextView
        android:id="@+id/signupScreentext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/signup_screen"
        android:gravity="start"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
        android:textSize="45sp"
        android:textColor="@color/black"
        android:layout_margin="15dp" />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/signupScreentext"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginTop="30dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/signupScreentext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameinputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/purple_200"
            android:hint="@string/name"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:boxStrokeWidth="1dp"
            app:boxStrokeErrorColor="#FF0000"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginScreentext"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneinputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxStrokeColor="@color/purple_200"
            android:hint="@string/phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:expandedHintEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:boxStrokeWidth="1dp"
            app:boxStrokeErrorColor="#FF0000"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginScreentext">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailinputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxStrokeColor="@color/purple_200"
            android:hint="@string/email"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:boxStrokeWidth="1dp"
            app:boxStrokeErrorColor="#FF0000"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginScreentext"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordinputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxStrokeColor="@color/purple_200"
            android:hint="@string/password"
            android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:boxStrokeWidth="1dp"
            app:passwordToggleEnabled="true"
            app:boxStrokeErrorColor="#FF0000"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginScreentext"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:text="@string/signup_screen"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
            android:textSize="20sp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/black"
            app:cornerRadius="4dp"
            app:rippleColor="@color/purple_200"
            app:elevation="20dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
    </LinearLayout>

</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>